# ner-tutorial

./: Makefile  app.py  pyproject.toml
src/model/: ner.py
src/models/base/: data.py  load.py  metrics.py  test.py  train.py
src/models/ner/: __init__.py  data.py  load.py  lora.py  metrics.py  test.py  train.py
templates/: index.html
