[project]
name = "play-ner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=0.26.0",
    "datasets>=3.6.0",
    "fastapi>=0.115.14",
    "mlflow>=3.1.1",
    "seqeval>=1.2.2",
    "torch>=2.7.1",
    "transformers>=4.53.0",
    "uvicorn>=0.35.0",
]
